# chatgpt-example

./: .gitmodules  .tool-versions  404.html  README.md  index.html  index.xml  main.py  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
categories/: index.html  index.xml
data/: input.txt
hugo/: config.toml  package-lock.json  package.json
output/: 100Base-LX.md  100Base-T.md  10GBase-SR.md  AC.md  ACCT.md  ACK.md  AI.md  AP.md  ARP.md  AS.md  BBR.md  BCP.md  BGP-4.md  BLE.md  C&C.md  CIDR.md  CNAME.md  CPPM.md  CPRM.md  CPU.md  CR.md  CRM.md  CSMA_CD.md  CSS.md  CTS.md  Cookie.md  DB.md  DC.md  DHCP.md  DMZ.md  DNS.md  DTCP.md  Dos.md  EHLO.md  ESMTP.md  FIN.md  FP.md  FQDN.md  FTP.md  FW.md  (+89 more)
posts/: index.html  index.xml
posts/100base-lx/: index.html
posts/100base-t/: index.html
posts/10gbase-sr/: index.html
posts/ac/: index.html
posts/acct/: index.html
posts/ack/: index.html
posts/ai/: index.html
posts/ap/: index.html
posts/arp/: index.html
posts/as/: index.html
posts/bbr/: index.html
posts/bcp/: index.html
posts/bgp-4/: index.html
posts/ble/: index.html
posts/cc/: index.html
posts/cidr/: index.html
posts/cname/: index.html
posts/com/: index.html
posts/cookie/: index.html
posts/cppm/: index.html
posts/cprm/: index.html
posts/cpu/: index.html
posts/cr/: index.html
posts/crm/: index.html
posts/csma_cd/: index.html
posts/css/: index.html
posts/cts/: index.html
posts/db/: index.html
posts/dc/: index.html
posts/dhcp/: index.html
posts/dmz/: index.html
tags/: index.html  index.xml
(+111 files in other folders)
